k8s_practice/my-nginx.yaml
# --- 第一部分：定义 Deployment (应用本身) ---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-deploy # 部署的名字
spec:
    replicas: 3 # 副本数：先启动 1 个
    selector:
        matchLabels:
            app: my-nginx # 标签选择器：管理所有贴了 "app=my-nginx" 标签的容器
    template:
        metadata:
            labels:
                app: my-nginx # 给容器贴上标签
        spec:
            containers:
                - name: nginx
                  image: nginx:latest
                  ports:
                      - containerPort: 80

---
# --- 第二部分：定义 Service (网络入口) ---
apiVersion: v1
kind: Service
metadata:
    name: nginx-svc # 服务名字
spec:
    type: LoadBalancer # 类型：LoadBalancer (Docker Desktop 会自动把这个暴露到 localhost)
    selector:
        app: my-nginx # 重点：通过标签找到上面的 Deployment
    ports:
        - protocol: TCP
          port: 8032 # 外部访问端口
          targetPort: 80 # 容器内部端口
