k8s_practice/redis-k8s.yaml
# 1. Redis Service (内部域名: redis-svc)
apiVersion: v1
kind: Service
metadata:
    name: redis-svc # ⚠️ Java 代码里要填这个名字
spec:
    ports:
        - port: 6379
    selector:
        app: redis-k8s

---
# 2. Redis Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis-deploy
spec:
    replicas: 1
    selector:
        matchLabels:
            app: redis-k8s
    template:
        metadata:
            labels:
                app: redis-k8s
        spec:
            containers:
                - name: redis
                  image: redis:7.0
                  ports:
                      - containerPort: 6379
